--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ Description: Awesome dude, awesome life
                 <div class="notepad-post-menu-header-simple">
 {% endif %}
                     <a class="notepad-blog-logo" href="{{ site.url }}">
-                        <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" />
+                        Home
                     </a>
 
                 <div class="notepad-blog-menu">      
