--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,11 +33,10 @@ Description: Awesome dude, awesome life
             <a href="#"><i class="fa fa-times"></i></a>
         </li>
 {% for link in site.links %}
-            <li>{% if link.external %}
-            <a href="{{ link.url }}">{{ link.title }}</a>
-            {% else %}
+
+            {% if %}
             <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-            {% endif %} </li>
+            {% else %} </li>
 {% endfor %}            
            <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
     </ul>
