--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,8 @@ Description: Awesome dude, awesome life
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
 <header class="notepad-site-head">
     <div class="notepad-site-head-menu">
-        <a class="notepad-blog-logo" href="{{ site.url }}"><img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo" /></a>
+        <li>{% if link.external %}
+            <a href="{{ link.url }}">{{ link.title }}</a>
         
         
         <div class="notepad-blog-menu">      
