--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,9 +26,9 @@ Description: Awesome dude, awesome life
         <header class="notepad-page-header">
             <div class="notepad-page-menu-header">
                 
-                    <a class="notepad-blog-logo" href="{{ site.url }}">
-                        <img src="{{ site.url }}/images/{{ site.logo }}" alt="Blog Logo">
-                    </a>
+                <li>{% if link.external %}
+                    <a href="{{ link.url }}">{{ link.title }}</a>
+                
                 
                 
                 
