--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,6 +28,7 @@ Description: Awesome dude, awesome life
                 
                 <li>{% if link.external %}
                     <a href="{{ link.url }}">{{ link.title }}</a>
+                    {% endif %}
                 </li>
                 
                 
