--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,7 @@ Description: Awesome dude, awesome life
     <div class="notepad-site-head-menu">
         <li>{% if link.external %}
             <a href="{{ link.url }}">{{ link.title }}</a>
+            {% endif %}
         </li>
         
         <div class="notepad-blog-menu">      
