--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,7 @@ Description: Awesome dude, awesome life
                     
                         <li>{% if link.external %}
                             <a href="{{ link.url }}">{{ link.title }}</a>
+                            {% endif %}
                         </li>
 
                 <div class="notepad-blog-menu">      
