--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,7 @@ Description: Awesome dude, awesome life
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
 <header class="notepad-site-head">
     <div class="notepad-site-head-menu">
+        {% for link in site.links %}
         <li>{% if link.external %}
             <a href="{{ link.url }}">{{ link.title }}</a>
             {% endif %}
