--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ Description: Awesome dude, awesome life
             <header class="notepad-post-header-simple">
                 <div class="notepad-post-menu-header-simple">
 {% endif %}
-                    
+{% for link in site.links %}   
                         <li>{% if link.external %}
                             <a href="{{ link.url }}">{{ link.title }}</a>
                             {% endif %}
@@ -51,7 +51,7 @@ Description: Awesome dude, awesome life
         <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
     </ul>
 
-</div>
+                </div>
             </div>
 {% if page.imagefeature %}
             <div class="notepad-post-title bg-check">
