--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,89 +34,66 @@ Description: Awesome dude, awesome life
 </head>
 
 <body class="post-template" itemscope itemtype="http://schema.org/WebPage">
-    {% if page.imagefeature %}
-    <main id="notepad-post-container" class="notepad-post-container intro-effect-sliced" role="main">
-        <header class="notepad-post-header">
-            <div class="bg-img"></div>
 
-            <div class="notepad-post-menu-header">
-                {% else %}
-                <main id="notepad-post-container-simple" class="notepad-post-container-simple" role="main">
-                    <header class="notepad-post-header-simple">
-                        <div class="notepad-post-menu-header-simple">
-                            {% endif %}
-                            {% for link in site.links %}
-                            <li>{% if link.external %}
-                                <a href="{{ link.url }}">{{ link.title }}</a>
-                                {% endif %}
-                            </li>
+    <main id="notepad-post-container-simple" class="notepad-post-container-simple" role="main">
+        <header class="notepad-post-header-simple">
+            <div class="notepad-post-menu-header-simple">
 
-                            <div class="notepad-blog-menu">
-                                <div class="notepad-mobile-menu show-for-small">
-                                    <a href="#"><i class="fa fa-bars"></i></a>
-                                </div>
-                                <ul class="notepad-menu">
-                                    <li class="notepad-mobile-close-btn show-for-small text-right">
-                                        <a href="#"><i class="fa fa-times"></i></a>
-                                    </li>
-                                    {% for link in site.links %}
+                {% for link in site.links %}
+                <li>{% if link.external %}
+                    <a href="{{ link.url }}">{{ link.title }}</a>
+                    {% endif %}
+                </li>
 
-
-                                    <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
-                                    {% endfor %}
-                                </ul>
-
-                            </div>
-                        </div>
-                        {% if page.imagefeature %}
-                        <div class="notepad-post-title bg-check">
-                            <h1>{{ page.title }}</h1>
-                            <p>by <strong>{{ site.owner.name }}</strong> &#8212;
-                                {% assign tagsize = page.tags.size %}{% if tagsize != 0 %}on
-                                {% for tag in page.tags %}<a
-                                    href="{{ site.url }}/tags/index.html#{{ tag | cgi_encode }}" data-toggle="tooltip"
-                                    title="Posts tagged with {{ tag }}"
-                                    rel="tag">{{ tag }}</a>{% unless forloop.last %}&nbsp;&comma;&nbsp;{% endunless %}{% endfor %}{% endif %}
-                                <strong><time
-                                        datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d %b %Y" }}</time></strong>
-                            </p>
-                        </div>
-                        <div class="bg-img"></div>
-                    </header>
-                    <button class="trigger bg-check" data-info="Read more"><span>Trigger</span></button>
-                    <img src="{{ site.url }}/images/{{ page.imagefeature }}" alt="cover-image" />
-                    {% else %}
-                    <div class="notepad-post-title-simple row">
-                        <div class="small-12 columns">
-                            <div class="notepad-post-meta-simple">
-                                <h1>{{ page.title }}</h1>
-                                <p>by <strong>{{ site.owner.name }}</strong> &#8212;
-                                    {% assign tagsize = page.tags.size %}{% if tagsize != 0 %}on
-                                    {% for tag in page.tags %}<a
-                                        href="{{ site.url }}/tags/index.html#{{ tag | cgi_encode }}"
-                                        data-toggle="tooltip" title="Posts tagged with {{ tag }}"
-                                        rel="tag">{{ tag }}</a>{% unless forloop.last %}&nbsp;&comma;&nbsp;{% endunless %}{% endfor %}{% endif %}
-                                    <strong><time
-                                            datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d %b %Y" }}</time></strong>
-                                </p>
-                            </div>
-                        </div>
+                <div class="notepad-blog-menu">
+                    <div class="notepad-mobile-menu show-for-small">
+                        <a href="#"><i class="fa fa-bars"></i></a>
                     </div>
-        </header>
-        {% endif %}
-        {% if page.imagefeature %}<article class="notepad-post-content post">{% else %}<article
-                class="notepad-post-content post tag-simple">{% endif %}
-                <div>{{ content }}
+                    <ul class="notepad-menu">
+                        <li class="notepad-mobile-close-btn show-for-small text-right">
+                            <a href="#"><i class="fa fa-times"></i></a>
+                        </li>
+                        {% for link in site.links %}
+
+
+                        <a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>
+                        {% endfor %}
+                    </ul>
+
                 </div>
-            </article>
-            <div class="cf"></div>
-            <div class="cf"></div>
+            </div>
+            <div class="bg-img"></div>
+        </header>
+
+        <div class="notepad-post-title-simple row">
+            <div class="small-12 columns">
+                <div class="notepad-post-meta-simple">
+                    <h1>{{ page.title }}</h1>
+                    <p>by <strong>{{ site.owner.name }}</strong> &#8212;
+                        {% assign tagsize = page.tags.size %}{% if tagsize != 0 %}on
+                        {% for tag in page.tags %}<a href="{{ site.url }}/tags/index.html#{{ tag | cgi_encode }}"
+                            data-toggle="tooltip" title="Posts tagged with {{ tag }}"
+                            rel="tag">{{ tag }}</a>{% unless forloop.last %}&nbsp;&comma;&nbsp;{% endunless %}{% endfor %}{% endif %}
+                        <strong><time
+                                datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d %b %Y" }}</time></strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+        
+
+        <article class="notepad-post-content post tag-simple">
+            <div>{{ content }}
+            </div>
+        </article>
+        <div class="cf"></div>
+        <div class="cf"></div>
 
 
-            <div class="cf"></div>
+        <div class="cf"></div>
 
-            <section class="notepad-disqus row">
-            </section>
+        <section class="notepad-disqus row">
+        </section>
     </main>
 
 </body>
