--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,6 +44,7 @@ Description: Awesome dude, awesome life
                     <a href="{{ link.url }}">{{ link.title }}</a>
                     {% endif %}
                 </li>
+                {% endfor %}
 
                 <div class="notepad-blog-menu">
                     <div class="notepad-mobile-menu show-for-small">
