--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,12 @@ Description: Awesome dude, awesome life
         <header class="notepad-post-header-simple">
             <div class="notepad-post-menu-header-simple">
 
-
+                {% for link in site.links %}
+                <li>{% if link.external %}
+                    <a href="{{ link.url }}">{{ link.title }}</a>
+                    {% endif %}
+                </li>
+                {% endfor %}
 
                 <div class="notepad-blog-menu">
                     <div class="notepad-mobile-menu show-for-small">
