--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,7 +66,7 @@ Description: Awesome dude, awesome life
                     <h1>{{ page.title }}</h1>
                     <p>
                         <strong><time
-                                datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d %m %Y" }}</time></strong>
+                                datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d - %m - %Y" }}</time></strong>
                     </p>
                 </div>
             </div>
