--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,8 +65,7 @@ Description: Awesome dude, awesome life
                 <div class="notepad-post-meta-simple">
                     <h1>{{ page.title }}</h1>
                     <p>
-                        <strong><time
-                                datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%d - %m - %Y" }}</time></strong>
+                       <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y-%m-%d" }}</time>
                     </p>
                 </div>
             </div>
