--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
             </a>
-            {{ site.tagline }} - Day <div style="display:inline"; id="dynamic_day"></div>
+            {{ site.tagline }}
           </h3>
         </div>
       </div>
