--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             <a href="{{ site.baseurl }}/" title="Home" title="{{ site.title }}">
               <img class="masthead-logo" src="{{ site.baseurl }}{{ site.logo }}"/>
             </a>
-            {{ site.tagline }}</div>
+            {{ site.tagline }} 
           </h3>
         </div>
       </div>
@@ -37,10 +37,8 @@
         var toggle = document.querySelector('.sidebar-toggle');
         var sidebar = document.querySelector('#sidebar');
         var checkbox = document.querySelector('#sidebar-checkbox');
-
         document.addEventListener('click', function(e) {
           var target = e.target;
-
           if (target === toggle) {
             checkbox.checked = !checkbox.checked;
             e.preventDefault();
@@ -54,7 +52,6 @@
     {% if site.google_analytics_token %}
     <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
 ga('create', '{{ site.google_analytics_token }}', 'auto');
 ga('send', 'pageview');
     </script>
@@ -78,7 +75,6 @@ ga('send', 'pageview');
       var total_date = ((today-firstday) / 86400000)+1; // calc datediff
       $("#dynamic_day").text(total_date);
     });
-
     // Calculate current_date_streak dynamically
     $(document).ready(function(){
       var latest_post_date_str = "{{ site.posts.first.date }}";
