--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,6 +9,7 @@ title: Categories
   <div class="tags-expo-section">
     {% for tag in site.categories %}
       {{ tag[0] }}
+    {% endfor %}
     {% assign title = page.title %}
     {% for tag in site.categories %}
     {% if tag[0] == title %}
