--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,8 +17,10 @@
       {% assign sub_len = nav[1] | size | minus: 1 %}
 
       <span class="{% if sub_len > 0 %}foldable{% endif %}">
+        <a class="sidebar-nav-item ">
+          {{ nav[0] }}
+        </a>
         
-        {{ nav[0] }}
         
         
         {% for i in (1..sub_len) %}
@@ -31,7 +33,7 @@
 
             {% for tag in site.categories %}
               {% if nav[0] == 'Programming' %}
-                {% if tag[0] == '알고리즘' or tag[0] == 'Djanggo' or tag[0] == 'Java' or tag[0] == 'Javascript' or tag[0] == 'Python' %}
+                {% if tag[0] == '알고리즘' or tag[0] == 'Django' or tag[0] == 'Java' or tag[0] == 'Javascript' or tag[0] == 'Python' %}
                   <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Programing/{{ tag[0] }}">                 
                     {{ tag[0] }}
                   </a>
