--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -345,7 +345,15 @@ tbody tr:nth-child(odd) th {
 .post-title {
   margin-top: 0;
 }
-
+.post-head-title {
+  display: inline-block;
+  width: 100%;
+  background-color:$header-desc-background-color;
+  background-size: cover;
+  font-size: 2em;
+  text-align: center;
+  color: $header-desc-text-color;
+}
 /* Meta data line below post title */
 .post-date {
   display: block;
