--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -348,7 +348,7 @@ tbody tr:nth-child(odd) th {
 .post-head-title {
   display: inline-block;
   width: 100%;
-  background-color:$header-desc-background-color;
+  background-color: #FFF;
   background-size: cover;
   font-size: 2em;
   text-align: center;
