--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -352,7 +352,7 @@ tbody tr:nth-child(odd) th {
   background-size: cover;
   font-size: 2em;
   text-align: center;
-  color:  #b0b0b0;;
+  color:  #000000;
 }
 /* Meta data line below post title */
 .post-date {
