--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
+  <h1>{{ page.category }}</h1>
+  <h1>{{ page.categories }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {% if page.tags %} | 
   {% for tag in page.tags %}
