--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,11 @@ layout: default
   <h1>{{ page.category }}</h1>
   <h1>{{ page.categories }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-  {% if page.tags %} | 
-  {% for tag in page.tags %}
-    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+
+  {% for category in page.category %}
+    <a href="/Category/{{ category[0] }}" class="post-tag">{{ category[0] }}</a>
   {% endfor %}
-  {% endif %}
+
   <article>
     {{ content }}
   </article>
