--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,21 +35,21 @@
               {% if nav[0] == 'Programming' %}
                 {% if tag[0] == '알고리즘' or tag[0] == 'Django' or tag[0] == 'Java' or tag[0] == 'Javascript' or tag[0] == 'Python' %}
                   <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
-                    {{ tag[0] }}
+                    {{ tag[0] | first }} ({{ tag[0] | last | size }})
                   </a>
                 {% endif %}
               {% endif %}
               {% if nav[0] == 'Cloud' %}
               {% if tag[0] == 'Docker' or tag[0] == 'Kubernetes' %}
                 <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">                 
-                  {{ tag[0] }}
+                  {{ tag[0] | first }} ({{ tag[0] | last | size }})
                 </a>
               {% endif %}
             {% endif %}
               {% if nav[0] == 'Blog' %}
                 {% if tag[0] == '환경설정' %}
                   <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == tag[0] %}active{% endif %}" href="/Category/{{ tag[0] }}">
-                    {{ tag[0] }}
+                    {{ tag[0] | first }} ({{ tag[0] | last | size }})
                   </a>
                 {% endif %}
               {% endif %}
