--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -14,7 +14,7 @@ title: Categories
         {% for post in tag[1] %}
           <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
         <li>
-          {{ post.title }}
+          {{ post.excerpt }}
         <small class="post-date">{{ post.date | date_to_string }}</small>
         </li>
         </a>
