--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,16 @@
-   
-  <a href="https://github.com/minyoungjung">
-    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-  </a>
-  
-  <a href="minyoungjung84@gmail.com">
-    <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-  </a>
+<div class="masthead">
+    <div class="container">
+        <h3 class="masthead-title">
+
+            <a href="https://github.com/sanggil1107">
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+            </a>
+                
+            <a href="yangpang1107@gmail.com">
+                <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+            </a>
+        </h3>
+    </div>
+</div>
+
   
