--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,5 +83,20 @@ ga('send', 'pageview');
       }
     });
   </script>
-  {% include footer.html %}
+  <div class="masthead">
+      <div class="container">
+          <h3 class="masthead-title">
+
+              <a href="https://github.com/sanggil1107">
+                  <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+              </a>
+                  
+              <a href="yangpang1107@gmail.com">
+                  <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+              </a>
+          </h3>
+      </div>
+  </div>
+
+  
 </html>
