--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,13 +18,24 @@ layout: default
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
+    {% for post in site.related_posts limit:11 %}
+    index is : {{ forloop.index }} {{post.title}}<br />
+    {{ site.related_posts[forloop.index].url }}
+
+    {% assign prev = forloop.index | minus:1 %}
+    {% assign next = forloop.index | plus:1 %}
+    prev : {{ prev }}
+    next : {{ next }}
+    <hr/>
       <li>
         <h3>
+          <!--
           <a href="{{ site.baseurl }}{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
+          -->
+         
         </h3>
       </li>
     {% endfor %}
