--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,11 @@ layout: default
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
-    
+  
     {% for category in site.categories %}
+    <p>{{category}}</p>  
+    <p>{{category[0]}}</p>  
+    <p>{{category[1]}}</p>  
       {% if category[0] == page.category %}
         {% for post in category[1] %}
           index is : {{ forloop.index }} {{post.title}}<br />
