--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,17 @@ layout: default
     <a href="/Category/{{ categories }}" class="post-tag">{{ categories }}</a>
   {% endfor %}
   <p>{{ page.category }}</p>
+  {{ page.category.post }}
+  {% for category in site.categories %}
+  <p>{{category}}</p>  
+  <p>{{category[0]}}</p>  
+  <p>{{category[1]}}</p>  
+    {% if category[0] == page.category %}
+      {% for post in category[1] %}
+        index is : {{ forloop.index }} {{post.title}}<br />
+      {% endfor %}
+    {% endif %}
+  {% endfor %}
   <article>
     {{ content }}
   </article>
@@ -19,13 +30,7 @@ layout: default
   <h2>Related Posts</h2>
   <ul class="related-posts">
   
-    {{ page.category.post }}
-    {% for category in site.categories %}
-    <p>{{category}}</p>  
-    <p>{{category[0]}}</p>  
-    <p>{{category[1]}}</p>  
-
-    {% endfor %}
+ 
     <hr/>
       <li>
         <h3>
