--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,11 @@ layout: default
 
 
   {% for tag in site.categories %}
-    {% for post in tag[1] %}
-      index : {{ forloop.index }} {{ post.title }}
-    {% endfor %}
+    {% if page.category == tag[0] %}
+      {% for post in tag[1] %}
+        index : {{ forloop.index }} {{ post.title }}
+      {% endfor %}
+    {% endif %}
   {% endfor %}
  
   <article>
