--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
 
 
   {% for tag in site.categories %}
-    {% if page.category == tag[0] %}
+    {% if page.category == tag %}
       {% for post in tag[1] %}
         index : {{ forloop.index }} {{ post.title }}
       {% endfor %}
