--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,11 +12,15 @@ layout: default
 
 
   {% for tag in site.categories %}
-    {% if page.category == tag %}
-      {% for post in tag[1] %}
-        index : {{ forloop.index }} {{ post.title }}
-      {% endfor %}
-    {% endif %}
+    <p>category : {{ page.category }}</p>
+    <p>tag : {{ tag }}</p><br>
+    <p>tag0 : {{ tag[0] }}</p><br>
+    <p>tage1 : {{ tag[1] }}</p><br>
+    {% for post in tag[1] %}
+      index : {{ forloop.index }} {{ post.title }}
+    {% endfor %}
+  
+
   {% endfor %}
  
   <article>
