--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,20 +83,21 @@ ga('send', 'pageview');
       }
     });
   </script>
-  <div class="masthead">
-      <div class="container">
-          <h3 class="masthead-title">
+  <footer>
+    <div class="masthead">
+        <div class="container">
+            <h3 class="masthead-title">
 
-              <a href="https://github.com/sanggil1107">
-                  <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-              </a>
-                  
-              <a href="yangpang1107@gmail.com">
-                  <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-              </a>
-          </h3>
-      </div>
-  </div>
-
+                <a href="https://github.com/sanggil1107">
+                    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                </a>
+                    
+                <a href="yangpang1107@gmail.com">
+                    <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                </a>
+            </h3>
+        </div>
+    </div>
+  </footer>
   
 </html>
