--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,9 +56,9 @@ ga('send', 'pageview');
     {% endif %}
   </body>
   <footer>
-    <div class="masthead">
+    <div class="mastfooter">
         <div class="container">
-            <h3 class="masthead-title">
+          
 
                 <a href="https://github.com/sanggil1107">
                     <i class="fa fa-github fa-2x" aria-hidden="true"></i>
@@ -67,7 +67,7 @@ ga('send', 'pageview');
                 <a href="yangpang1107@gmail.com">
                     <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
                 </a>
-            </h3>
+           
         </div>
     </div>
   </footer>
