--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@ ga('send', 'pageview');
     {% endif %}
   </body>
   <footer>
-    <div class="mastfooter">
+    <div id="footer" class="mastfooter">
         <div class="container">
           
 
