--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,20 +15,22 @@ layout: default
     {% for post in tag[1] %}
       {% if page.category == post.category %}
         {% if page.title == post.title %}
+          {% assign count = {{ tag | last | size }} %}
           {% assign current = forloop.index | minus:1 %}
           {% assign prev = forloop.index %}
           {% assign next = forloop.index | minus:2 %}
+          count : {{ count }}
           이전 : <a class="post-title" href="{{ site.baseurl }}{{ tag[1][prev].url }}">
-              {{ tag[1][prev].title }} {{ prev }}
-          </a>
+              {{ tag[1][prev].title }} {{ prev }} </a>
+          
           <br>
           현재 : <a class="post-title" href="{{ site.baseurl }}{{ tag[1][current].url }}">
-              {{ tag[1][current].title }} {{ current }}
-          </a>
+              {{ tag[1][current].title }} {{ current }} </a>
+          
           <br>
           다음 : <a class="post-title" href="{{ site.baseurl }}{{ tag[1][next].url }}">
-              {{ tag[1][next].title }} {{ next }}
-          </a>
+              {{ tag[1][next].title }} {{ next }} </a>
+          
           <br>
         {% endif %}
       {% endif %}
