--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,7 @@ layout: default
     
   </ul>
 </div>
-<div class="more-post">
+<div class="more-posts">
   <div class="more-category">
     {% for categories in page.categories %}
     <h4>{{ categories }}카테고리의 다른 글</h4>   
@@ -73,7 +73,7 @@ layout: default
           {% if count < 5 %}
             <tr>
               <th class="more-posts-title">
-                <a href="{{site.url}}{{post.url}}"></a>
+                <a href="{{site.url}}{{post.url}}"> {{ post.title }}</a>
               </th>
               <td class="more-posts-date">{{ post.date | date:'%Y. %m. %d' }}</td>
             </tr>
