--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -357,7 +357,7 @@ tbody tr:nth-child(odd) th {
 }
 
 .more-posts-date {
-  text-align: right;
+  text-align: center;
   width: 80px;
   font-size: 11px;
   padding: 0 0 4px;
