--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -250,7 +250,7 @@ th {
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: #e5e5e5;
 }
 
 
@@ -357,7 +357,7 @@ tbody tr:nth-child(odd) th {
 }
 
 .more-posts-date {
-  text-align: center;
+  text-align: left;
   width: 80px;
   font-size: 11px;
   padding: 0 0 4px;
