--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@ layout: default
           {% if count < 8 %}
             <tr>
               <th class="more-posts-title">
-                <a href="{{site.url}}{{post.url}}"> {{ post.title }}</a>
+                <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ post.title }}</a>
               </th>
               <td class="more-posts-date">{{ post.date | date:'%Y. %m. %d' }}</td>
             </tr>
