--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -13,7 +13,7 @@ title: Categories
       <ul class="tags-expo-posts">
         {% for post in tag[1] %}
 
-        <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
+        <a class="post-title" href="{{ site.baseurl }}{{ post.url }}" style="color: black">
           <font size="5">
           {{ post.title }}
           </font>
