--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,19 +53,67 @@ layout: default
   </div>
   <table>
     <tbody>
-      {% assign count=0 %}
-      {% for post in site.posts %}
-        {% if post.categories == page.categories %}
-          {% assign count = count | plus:1 %}
-          {% if count < 8 %}
-            <tr>
-              <th class="more-posts-title">
-                <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ post.title }}</a>
-              </th>
-              <td class="more-posts-date">{{ post.date | date:'%Y. %m. %d' }}</td>
-            </tr>
+      {% for tag in site.categories %}
+        {% for post in tag[1] %}
+          {% if page.category == post.category %}
+            {% if page.title == post.title %}
+              {% assign count = tag | last | size %}
+              {% assign current = forloop.index | minus:1 %}
+              {% assign prev1 = forloop.index %}
+              {% assign next1 = forloop.index | minus:2 %}
+
+              {% assign prev2 = forloop.index | plus:1 %}
+              {% assign next2 = forloop.index | minus:3 %}
+
+              {% assign prev3 = forloop.index % | plus:2 }
+              {% assign next3 = forloop.index | minus:4 %}
+
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][next3].title }} {{ next3 }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][next3].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][next2].title }} {{ next2 }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][next2].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][next1].title }} {{ next1 }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][next1].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][current].title }} {{ current }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][current].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][prev1].title }} {{ prev1 }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][prev1].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][prev2].title }} {{ prev2 }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][prev2].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+              <tr>
+                <th class="more-posts-title">
+                  <a class="more-posts-title" href="{{site.url}}{{post.url}}"> &nbsp;{{ tag[1][prev3].title }} {{ prev3 }}</a>
+                </th>
+                <td class="more-posts-date">{{ tag[1][prev3].date | date:'%Y. %m. %d' }}</td>
+              </tr>
+            
+            {% endif %}
           {% endif %}
-        {% endif %}
+        {% endfor %}
       {% endfor %}
     </tbody>
   </table>
