--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,7 +65,7 @@ layout: default
               {% assign prev2 = forloop.index | plus:1 %}
               {% assign next2 = forloop.index | minus:3 %}
 
-              {% assign prev3 = forloop.index % | plus:2 }
+              {% assign prev3 = forloop.index | plus:2 %}
               {% assign next3 = forloop.index | minus:4 %}
 
               <tr>
